--- a/doc/fr/manuel.tex
+++ b/doc/fr/manuel.tex
@@ -5,7 +5,7 @@
 \title{Manuel d'utilisation du simulateur ARM\\Révision 1}
 
 
-\author{Jessica Déziel\\Marc-André Gardner\\Yannick Hold-Geoffroy\\Jean-François Lalonde}
+\author{Marc-André Gardner\\Yannick Hold-Geoffroy\\Jean-François Lalonde}
 
 %\date{28 March 2010} % without \date command, current date is supplied
 
@@ -417,5 +417,12 @@ Note : ces instructions sont des pseudo-instructions. Elles sont transformées p
 	\item SVC
 \end{itemize}
 
+\section{Remerciements}
+
+Les auteurs tiennent à remercier les personnes suivantes pour l'aide qu'ils ont apporté à la réalisation de ce simulateur :
+\begin{itemize}
+	\item Jessica Déziel, pour le design de l'interface graphique
+	\item Jonathan Gilbert, pour les tests préliminaires du simulateur et la réalisation des exercices
+\end{itemize}
 
 \end{document} 
