Small typo in dob

--- a/doc/fr/manuel.tex
+++ b/doc/fr/manuel.tex
@@ -112,7 +112,7 @@ Passer la souris sur ce X fait apparaître une infobulle contenant un texte expl
 \caption{Le message expliquant l'erreur peut être consulté en passant la souris sur le X.}
 \end{figure}
 
-Une fois le programme \emph{assemblé} (le bouton ``Démarré'' pressé et le code assemblé sans erreur), il est possible de mettre en place des points d'arrêt (\textit{breakpoints}) en cliquant sur le numéro d'une ligne. Un point d'arrêt force le simulateur à s'arrêter lorsqu'il l'atteint. Un point d'arrêt peut être désactivé en recliquant sur le même numéro de ligne. Par exemple, dans la figure suivante, les lignes 20 et 22 sont des points d'arrêt :
+Une fois le programme \emph{assemblé} (le bouton ``Démarrer'' pressé et le code assemblé sans erreur), il est possible de mettre en place des points d'arrêt (\textit{breakpoints}) en cliquant sur le numéro d'une ligne. Un point d'arrêt force le simulateur à s'arrêter lorsqu'il l'atteint. Un point d'arrêt peut être désactivé en recliquant sur le même numéro de ligne. Par exemple, dans la figure suivante, les lignes 20 et 22 sont des points d'arrêt :
 \begin{figure}[h!]
 \raggedleft
 \includegraphics[width=0.9\linewidth]{pics/editeur_bkpt.png}
